<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_save_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key_placeholder"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_save_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/value_placeholder"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/save_plain_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="136dp"
        android:text="@string/save_plain_text_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/save_manually_encrypted_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="160dp"
        android:layout_marginTop="136dp"
        android:text="@string/save_manually_encrypted_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/save_api_encrypted_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="292dp"
        android:layout_marginTop="136dp"
        android:text="@string/save_api_encrypted_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <EditText
        android:id="@+id/edit_read_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:hint="@string/key_placeholder"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/read_plain_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="304dp"
        android:text="@string/read_plain_text_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/read_manually_encrypted_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="160dp"
        android:layout_marginTop="304dp"
        android:text="@string/read_manually_encrypted_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/read_api_encrypted_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="292dp"
        android:layout_marginTop="304dp"
        android:text="@string/read_api_encrypted_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="136dp"
        android:layout_marginTop="468dp"
        android:text="@string/reset_button_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_save_key" />
    /

</androidx.constraintlayout.widget.ConstraintLayout>